--- a/scripts/mlmc/analysis_ml_vl_cl.ipynb
+++ b/scripts/mlmc/analysis_ml_vl_cl.ipynb
@@ -43,12 +43,12 @@
    },
    "outputs": [],
    "source": [
-    "model = 'cgmy0'\n",
-    "case = '1d'\n",
-    "folder_name = 'results/giles_variance/' + case +'/' + model\n",
+    "model = \"cgmy0\"\n",
+    "case = \"1d\"\n",
+    "folder_name = \"results/giles_variance/\" + case + \"/\" + model\n",
     "cwd = Path().cwd()\n",
-    "data_file = Path(cwd, folder_name + '_data.pkl')\n",
-    "results_file = Path(cwd, folder_name + '.csv')"
+    "data_file = Path(cwd, folder_name + \"_data.pkl\")\n",
+    "results_file = Path(cwd, folder_name + \".csv\")"
    ]
   },
   {
@@ -56,12 +56,12 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "with open(data_file, 'rb') as f:\n",
+    "with open(data_file, \"rb\") as f:\n",
     "    data = pickle.load(f)\n",
     "\n",
-    "grid = data['grid']\n",
-    "model = data['model']\n",
-    "product = data['product']\n",
+    "grid = data[\"grid\"]\n",
+    "model = data[\"model\"]\n",
+    "product = data[\"product\"]\n",
     "\n",
     "h0 = grid.h"
    ],
@@ -82,7 +82,9 @@
    },
    "outputs": [],
    "source": [
-    "mlevell, vlevell, consistencycheck, kurtosis, ml, vl, cl = retrieve_results(results_file)"
+    "mlevell, vlevell, consistencycheck, kurtosis, ml, vl, cl = retrieve_results(\n",
+    "    results_file\n",
+    ")"
    ]
   },
   {
@@ -116,9 +118,18 @@
    ],
    "source": [
     "sFitIndex = 2\n",
-    "new_convergence_rates, cl_convergence_rates, ml_convergence_rates = \\\n",
-    "plot_graphs(model=model, sFitIndex=sFitIndex, h0=h0, mlevell=mlevell, vlevell=vlevell,\n",
-    "            consistencycheck=consistencycheck, kurtosis=kurtosis, ml=ml, vl=vl, cl=cl)"
+    "new_convergence_rates, cl_convergence_rates, ml_convergence_rates = plot_graphs(\n",
+    "    model=model,\n",
+    "    sFitIndex=sFitIndex,\n",
+    "    h0=h0,\n",
+    "    mlevell=mlevell,\n",
+    "    vlevell=vlevell,\n",
+    "    consistencycheck=consistencycheck,\n",
+    "    kurtosis=kurtosis,\n",
+    "    ml=ml,\n",
+    "    vl=vl,\n",
+    "    cl=cl,\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
