minor changes and formatting

--- a/scripts/mlmc/analysis_ml_vl_cl.ipynb
+++ b/scripts/mlmc/analysis_ml_vl_cl.ipynb
@@ -43,9 +43,9 @@
    },
    "outputs": [],
    "source": [
-    "model = \"cgmy0\"\n",
+    "model = \"cgmy15\"\n",
     "case = \"1d\"\n",
-    "folder_name = \"results/giles_variance/\" + case + \"/\" + model\n",
+    "folder_name = \"results/giles_convergence/\" + case + \"/\" + model\n",
     "cwd = Path().cwd()\n",
     "data_file = Path(cwd, folder_name + \"_data.pkl\")\n",
     "results_file = Path(cwd, folder_name + \".csv\")"
